@@ -1,7 +1,8 @@
 v0.8.1
+Changed : --ultra now enables levels beyond 19
 Changed : -i# now selects benchmark time in second
 Fixed : ZSTD_compress* can now compress > 4 GB in a single pass, reported by Nick Terrell
-Fixed : speed regression for specific patterns (#272)
+Fixed : speed regression on specific patterns (#272)
 
 v0.8.0
 Improved : better speed on clang and gcc -O2, thanks to Eric Biggers
